Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85608

Qt5.15, it created 2 more commandbuffer. but they were not freed.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.3, 5.15.4, 6.0.1, 6.1.0 Alpha
    • 5.15.0 RC2
    • Other
    • None
    • imx8QM 5.4.24 yocto release build
    • Linux/Wayland
    • bd1713ef820a3d56fc19df46059fde3372092f9b (qt/qtwayland/dev) be5a2d2ff56f0ea39a891f3b04604b9e4835871f (qt/qtwayland/6.0) adc364c96fbd884ef706a68ba9188a94544d13d3 (qt/tqtc-qtwayland/tqtc/lts-5.15)

    Description

      when running customer's stress test application HelloWorldX 4- 5 hours, met out of memory.

      Our debug indicates Qt5.15 created 2 more commandbuffer. but they were not freed.

      Viewer: show is called!
      [ 5] _ConstructCommandBuffer(4),0xdfd0e8
      [ 6] _ConstructCommandBuffer(5),0xdfd050
      [ 7] _ConstructCommandBuffer(6),0xdfcfb8
      [ 8] _ConstructCommandBuffer(7),0xdfcf20
      [ 9] _ConstructCommandBuffer(8),0x67401e00
      [ 10] _ConstructCommandBuffer(9),0x67401a68
      [ 11] _ConstructCommandBuffer(10),0x674342a8
      [ 12] _ConstructCommandBuffer(11),0x67434340
      Profiler: 1593432867140 ms
      Test: hide 1
      Viewer: hide will be called!
      [ 13] _DoFreeCommandBufferMemory(0), 0xdfd0e8
      [ 14] _DoFreeCommandBufferMemory(1), 0xdfd050
      [ 15] _DoFreeCommandBufferMemory(2), 0x67401e00
      [ 16] _DoFreeCommandBufferMemory(3), 0x67401a68
      [ 17] _DoFreeCommandBufferMemory(4), 0x674342a8
      [ 18] _DoFreeCommandBufferMemory(5), 0x67434340

       

      Attachments

        1. HelloWorldX
          1.96 MB
        2. qmlwindow-showhide.tar.gz
          2.35 MB
        3. dump.txt
          5 kB
        4. qmlwindow-showhide
          162 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            chingling chingling wang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes